--- a/Test2 - News/Test2.2 - News Linear/Code/lstm.ipynb
+++ b/Test2 - News/Test2.2 - News Linear/Code/lstm.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test 2 - News"
+    "# Test 2.2 - News Linear"
    ]
   },
   {
@@ -87,15 +87,13 @@
     "# Model parameter\n",
     "input_size = 7\n",
     "output_size = 1\n",
-    "hidden_size = 1000\n",
-    "num_layers = 6\n",
-    "dropout = 0.2\n",
+    "hidden_size = 2048\n",
+    "num_layers = 20\n",
+    "dropout = 0.3\n",
     "\n",
     "# Training parameter\n",
-    "batch_size = 16\n",
-    "num_epochs = 100\n",
-    "learning_rate = 0.001\n",
-    "seq_size = 30"
+    "num_epochs = 0\n",
+    "learning_rate = 0.001"
    ]
   },
   {
@@ -116,22 +114,27 @@
    "outputs": [],
    "source": [
     "class Net(nn.Module):\n",
-    "\n",
-    "    def __init__(self, input_size, output_size, hidden_size, num_layers):\n",
+    "    def __init__(self, input_size, output_size, hidden_size, num_layers, dropout_rate=0.5):\n",
     "        super(Net, self).__init__()\n",
-    "        self.layer_1 = nn.LSTM(input_size, hidden_size, batch_first=True)\n",
-    "        self.layer_2 = nn.LSTM(hidden_size, hidden_size, batch_first=True, dropout=dropout, num_layers=num_layers)\n",
+    "        \n",
+    "        self.layer_1 = nn.Linear(input_size, hidden_size)\n",
+    "        self.dropout = nn.Dropout(p=dropout_rate)  \n",
+    "\n",
+    "        self.hidden_layers = nn.ModuleList([\n",
+    "            nn.Linear(hidden_size, hidden_size) for _ in range(num_layers)\n",
+    "        ])\n",
+    "        \n",
     "        self.output_layer = nn.Linear(hidden_size, output_size)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x, _ = self.layer_1(x)  \n",
-    "        x = torch.relu(x)\n",
-    "\n",
-    "        x, _ = self.layer_2(x)\n",
-    "        x = torch.relu(x)\n",
-    "\n",
-    "        x = self.output_layer(x[:, -1, :])  \n",
+    "        x = torch.arctan(self.layer_1(x))\n",
+    "        x = self.dropout(x)\n",
     "        \n",
+    "        for layer in self.hidden_layers:\n",
+    "            x = torch.arctan(layer(x))\n",
+    "            x = self.dropout(x)\n",
+    "        \n",
+    "        x = self.output_layer(x)\n",
     "        return x"
    ]
   },
@@ -139,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dataloader"
+    "### Data Preperation"
    ]
   },
   {
@@ -153,29 +156,42 @@
    },
    "outputs": [],
    "source": [
-    "class FinanceDataset(Dataset):\n",
-    "    def __init__(self, data_path, seq_size):\n",
-    "        self.data = pd.read_pickle(data_path)\n",
-    "        self.seq_size = seq_size\n",
-    "        \n",
-    "        self.inputs = self.data.iloc[:, :-1].values\n",
-    "        self.labels = self.data.iloc[:, -1].values\n",
-    "        \n",
-    "        scaler = MinMaxScaler()\n",
-    "        self.inputs = scaler.fit_transform(self.inputs)\n",
+    "# Train Data\n",
+    "df_train = pd.read_pickle(\"../Data/spy_train_data.pkl\")\n",
     "\n",
-    "    def __len__(self):\n",
-    "        return len(self.inputs) - self.seq_size\n",
+    "inputs = torch.tensor(df_train.iloc[:, :-1].values)\n",
+    "labels = torch.tensor(df_train.iloc[:, -1].values)\n",
     "\n",
-    "    def __getitem__(self, idx):\n",
-    "        x = self.inputs[idx:idx + self.seq_size]\n",
-    "        y = self.labels[idx + self.seq_size] \n",
+    "# Normalize the data\n",
+    "# min_max_scaler = MinMaxScaler()\n",
     "\n",
-    "        # Convert to tensors\n",
-    "        x = torch.tensor(x, dtype=torch.float32)\n",
-    "        y = torch.tensor(y, dtype=torch.float32)\n",
-    "        \n",
-    "        return x, y"
+    "# Fit the scaler on the training data and transform the training data\n",
+    "# min_max_scaler.fit(inputs)\n",
+    "# inputs_scaled = min_max_scaler.transform(inputs)\n",
+    "inputs_scaled = torch.tensor(inputs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test Data\n",
+    "df_test = pd.read_pickle(\"../Data/spy_test_data.pkl\")\n",
+    "\n",
+    "df_test[\"news_probability\"] = df_test[\"news_probability\"].apply(lambda x: float(x.removeprefix(\"tensor(\").split(\",\")[0]))\n",
+    "\n",
+    "inputs_test = torch.tensor(df_test.iloc[:,:-1].values)\n",
+    "labels_test = torch.tensor(df_test.iloc[:,-1].values)\n",
+    "\n",
+    "# Normalize the data\n",
+    "# min_max_scaler = MinMaxScaler()\n",
+    "\n",
+    "# Fit the scaler on the training data and transform the training data\n",
+    "# min_max_scaler.fit(inputs_test)\n",
+    "# inputs_scaled_test = min_max_scaler.transform(inputs_test)\n",
+    "inputs_scaled_test = torch.tensor(inputs_test)\n"
    ]
   },
   {
@@ -198,23 +214,9 @@
     "# Initialize model, loss function, optimizer\n",
     "net = Net(input_size, output_size, hidden_size, num_layers)\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = optim.SGD(net.parameters(), lr=learning_rate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-01T10:17:07.919235Z",
-     "start_time": "2024-11-01T10:17:07.919001Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Initialize dataset and dataloader\n",
-    "dataset = FinanceDataset('../Data/spy_train_data.pkl', seq_size=seq_size)\n",
-    "train_loader = DataLoader(dataset, batch_size=batch_size)"
+    "optimizer = optim.SGD(net.parameters(), lr=learning_rate)\n",
+    "\n",
+    "print(net)"
    ]
   },
   {
@@ -235,31 +237,74 @@
    },
    "outputs": [],
    "source": [
-    "os.makedirs(\"../Models\", exist_ok=True)\n",
+    "os.makedirs(\"Models\", exist_ok=True)\n",
     "\n",
-    "losses = []\n",
-    "# Training loop\n",
+    "loss_vals = []\n",
+    "test_loss_vals = []\n",
+    "\n",
     "for epoch in range(num_epochs):\n",
-    "    running_loss = 0\n",
-    "    for inputs, labels in train_loader:\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = net(inputs.float())\n",
-    "        loss = criterion(torch.squeeze(outputs), labels.float())\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        running_loss += loss.item()\n",
-    "\n",
-    "        # Save model after each epoch\n",
-    "    model_path = f'../Models/model-{epoch + 1}.pt'\n",
-    "    torch.save(net.state_dict(), model_path)\n",
-    "\n",
+    "    net.train()  \n",
     "    \n",
-    "    if epoch % 10 == 0:\n",
-    "        learning_rate *= 0.5\n",
-    "        optimizer = optim.SGD(net.parameters(), lr=learning_rate)\n",
+    "    optimizer.zero_grad()\n",
     "\n",
-    "    print(f'Epoch {epoch + 1}, Loss: {running_loss / len(train_loader)}')\n",
-    "    losses.append(running_loss / len(train_loader))"
+    "    outputs = net(inputs_scaled.float())\n",
+    "    outputs = outputs.squeeze(-1)  \n",
+    "\n",
+    "    loss = criterion(outputs, labels.float())\n",
+    "    \n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    \n",
+    "    loss_vals.append(loss.item())\n",
+    "\n",
+    "    net.eval()\n",
+    "    with torch.no_grad():\n",
+    "        test_outputs = net(inputs_scaled_test.float())\n",
+    "        test_outputs = test_outputs.squeeze(-1) \n",
+    "        test_loss = criterion(test_outputs, labels_test.float())\n",
+    "        test_loss_vals.append(test_loss.item())\n",
+    "    \n",
+    "    # Save model after each epoch\n",
+    "    model_path = f'Models/model-{epoch + 1}.pt'\n",
+    "    torch.save(net.state_dict(), model_path)\n",
+    "    \n",
+    "    if (epoch + 1) % 10 == 0:\n",
+    "        learning_rate *= 0.5\n",
+    "        for param_group in optimizer.param_groups:\n",
+    "            param_group['lr'] = learning_rate\n",
+    "    \n",
+    "    if epoch % 5 == 0:\n",
+    "        print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {loss.item():.4f}, Test Loss: {test_loss.item():.4f}')\n",
+    "\n",
+    "net.eval()\n",
+    "with torch.no_grad():\n",
+    "    outputs_test = net(inputs_scaled_test.float()).squeeze(-1)\n",
+    "    loss_test = criterion(outputs_test, labels_test.float())\n",
+    "    print(f'Final Test Loss: {loss_test.item():.4f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Plotting the loss values\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(range(len(loss_vals)), loss_vals, label='Training Loss', color='red')\n",
+    "plt.plot(range(len(test_loss_vals)), test_loss_vals, label='Test Loss', color='blue')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.title('Training and Test Loss over Epochs')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "\n",
+    "# Printing the final loss values\n",
+    "print(f'Final Training Loss: {loss_vals[-1]:.4f}')\n",
+    "print(f'Final Test Loss: {loss_test.item():.4f}')\n"
    ]
   },
   {
@@ -280,15 +325,23 @@
    },
    "outputs": [],
    "source": [
-    "models = [f for f in os.listdir(\"../Models/\") if os.path.isfile(os.path.join(\"../Models/\", f))]\n",
-    "results = []\n",
-    "\n",
     "os.makedirs(\"logs\", exist_ok=True)\n",
     "os.makedirs(\"results\", exist_ok=True)\n",
     "\n",
-    "for model_name in models:\n",
+    "models = [f for f in os.listdir(\"Models/\")]\n",
+    "alredy_done = [f.removeprefix(\"backtest-\").removesuffix(\".csv.gz\") for f in os.listdir(\"results/\")]\n",
+    "print(len(models))\n",
+    "print(len(alredy_done))\n",
     "\n",
-    "    model_path = f\"../Models/{model_name}\"\n",
+    "test_data = pd.read_pickle(\"../../Data/spy_test_data.pkl\")\n",
+    "\n",
+    "for model_name in models:\n",
+    "    # Skip Backtesting for Models which already did the Backtesting\n",
+    "    if model_name in alredy_done:\n",
+    "        print(f\"Skip model: {model_name}\")\n",
+    "        continue\n",
+    "\n",
+    "    model_path = f\"Models/{model_name}\"\n",
     "    model = Net(input_size, output_size, hidden_size, num_layers)\n",
     "\n",
     "    # Load state_dict only\n",
@@ -314,7 +367,8 @@
     "            \"symbol\": \"SPY\",\n",
     "            \"cash_at_risk\": 0.5,\n",
     "            \"model\": model,\n",
-    "            \"num_prior_days\": 30\n",
+    "            \"num_prior_days\": 1,\n",
+    "            \"dataset\": test_data,\n",
     "        }\n",
     "    )\n",
     "\n",
@@ -323,24 +377,25 @@
     "        YahooDataBacktesting,\n",
     "        start_date,\n",
     "        end_date,\n",
-    "        parameters={\"symbol\": \"SPY\", \"cash_at_risk\": 0.5, \"model\": model},\n",
+    "        name=model_name,\n",
+    "        parameters={\n",
+    "            \"symbol\": \"SPY\", \n",
+    "            \"cash_at_risk\": 0.5, \n",
+    "            \"model\": model,  \n",
+    "            \"dataset\": test_data,\n",
+    "        },\n",
     "        benchmark_asset=\"SPY\",\n",
-    "        plot_file_html=f\"results/plot-{str(model_name)}.html\",\n",
-    "        tearsheet_file=f\"results/tearsheet-{model_name}.html\",\n",
-    "        trades_file=f\"results/plot-{str(model_name)}\",\n",
-    "        settings_file=f\"results/plot-{str(model_name)}\",\n",
-    "        indicators_file=f\"results/plot-{str(model_name)}\",\n",
     "        show_plot=True,\n",
     "        show_tearsheet=True\n",
     "    )\n",
-    "    backtest_results = pd.DataFrame(backtest_results)\n",
+    "\n",
+    "    # Convert to DataFrame only if results are non-empty\n",
+    "    backtest_results = pd.DataFrame(backtest_results)   \n",
     "    backtest_results[\"model\"] = model_name\n",
-    "    results.append(backtest_results)\n",
-    "\n",
-    "# Save the results to a CSV file\n",
-    "pd.concat(results, ignore_index=True).to_csv(\"results.csv\", index=False)\n",
-    "\n",
-    "print(\"Backtesting complete. Results saved to backtest_results.csv.\")\n"
+    "    \n",
+    "    backtest_results.to_csv(f\"results/backtest-{model_name}.csv.gz\", index=False, compression='gzip')\n",
+    "    \n",
+    "print(\"Backtesting complete. Results saved to backtest_results.csv.\")"
    ]
   },
   {
@@ -349,7 +404,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"results.csv\")\n",
+    "dfs = [pd.read_csv(f\"results/{f}\", compression=\"gzip\") for f in os.listdir(\"results/\")]\n",
+    "df = pd.concat(dfs).sort_values(by=[\"model\"])\n",
+    "#df = pd.read_csv(\"results.csv\")\n",
     "display(df.sort_values(by=[\"model\"]))"
    ]
   },
@@ -383,7 +440,7 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import numpy as np\n",
     "\n",
-    "model_path = f\"../Models/{model_name}\"\n",
+    "model_path = f\"Models/{model_name}\"\n",
     "model = Net(input_size, output_size, hidden_size, num_layers)\n",
     "\n",
     "# Load state_dict only\n",
@@ -391,21 +448,18 @@
     "model.eval()\n",
     "\n",
     "# Load your DataFrame\n",
-    "data = pd.read_pickle('../Data/test_dax_data.pkl')\n",
+    "data = pd.read_pickle('../../Data/spy_train_data.pkl')\n",
     "\n",
-    "test_data = FinanceDataset('../Data/test_dax_data.pkl', seq_size=seq_size)\n",
-    "test_loader = DataLoader(test_data, batch_size=batch_size)\n",
-    "# Select all rows and columns from index 1 to -1 (exclusive)\n",
-    "\n",
+    "inputs = torch.tensor(data.iloc[:, :-1].values, dtype=torch.float32)\n",
+    "labels = torch.tensor(data.iloc[:, -1].values, dtype=torch.float32)\n",
     "all_predictions = []\n",
     "all_labels = []\n",
     "\n",
-    "with torch.no_grad():\n",
-    "    for inputs, labels in test_loader:\n",
-    "        out = model(inputs) \n",
-    "        # Store predictions and labels\n",
-    "        all_predictions.append(out.numpy())  \n",
-    "        all_labels.append(labels.numpy())\n",
+    "\n",
+    "out = model(inputs) \n",
+    "# Store predictions and labels\n",
+    "all_predictions.append(out.detach().numpy())  \n",
+    "all_labels.append(labels.numpy())\n",
     "\n",
     "# Concatenate results\n",
     "all_predictions = np.concatenate(all_predictions)\n",
@@ -433,6 +487,7 @@
     "\n",
     "threshold = 0.5\n",
     "predicted_classes = (all_predictions.flatten() > threshold).astype(int)\n",
+    "print(predicted_classes)\n",
     "\n",
     "accuracy = accuracy_score(all_labels.flatten(), predicted_classes)\n",
     "precision = precision_score(all_labels.flatten(), predicted_classes)\n",
