--- a/Test5/Code/lstm.ipynb
+++ b/Test5/Code/lstm.ipynb
@@ -90,15 +90,18 @@
     "# Model parameter\n",
     "input_size = 8\n",
     "output_size = 1\n",
-    "hidden_size = 1000\n",
+    "hidden_size = 1500\n",
     "num_layers = 6\n",
     "dropout = 0.2\n",
     "\n",
     "# Training parameter\n",
-    "batch_size = 16\n",
-    "num_epochs = 5\n",
+    "batch_size = 1\n",
+    "num_epochs = 500\n",
     "learning_rate = 0.001\n",
-    "seq_size = 30"
+    "seq_size = 30\n",
+    "\n",
+    "train_data_path = \"../Data/train_dax_data.pkl\"\n",
+    "test_data_path = \"../Data/test_dax_data.pkl\""
    ]
   },
   {
@@ -140,38 +143,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-01T10:17:07.918741Z",
-     "start_time": "2024-11-01T10:17:07.916968Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class FinanceDataset(Dataset):\n",
-    "    def __init__(self, X, y):\n",
-    "        self.X = X\n",
-    "        self.y = y\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.X)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        return torch.tensor(self.X[idx], dtype=torch.float32), torch.tensor(self.y[idx], dtype=torch.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_sequences(data, labels, seq_length):\n",
-    "    X, y = [], []\n",
-    "    for i in range(len(data) - seq_length):\n",
-    "        X.append(data[i:i + seq_length])\n",
-    "        y.append(labels[i + seq_length])\n",
-    "    return np.array(X), np.array(y)"
+    "class FinanceDataset(Dataset):\n",
+    "    def __init__(self, input, output, seq_size):\n",
+    "        self.seq_size = seq_size\n",
+    "        \n",
+    "        self.inputs = input\n",
+    "        self.labels = output\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.inputs) - self.seq_size\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        x = self.inputs[idx:idx + self.seq_size]\n",
+    "        y = self.labels[idx + self.seq_size] \n",
+    "\n",
+    "        # Convert to tensors\n",
+    "        x = torch.tensor(x, dtype=torch.float32)\n",
+    "        y = torch.tensor(y, dtype=torch.float32)\n",
+    "        return x, y"
    ]
   },
   {
@@ -194,14 +186,12 @@
     "# Initialize model, loss function, optimizer\n",
     "net = Net(input_size, output_size, hidden_size, num_layers)\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = optim.Adam(net.parameters(), lr=0.001)"
+    "optimizer = optim.Adam(net.parameters(), lr=learning_rate)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Data"
    ]
@@ -217,19 +207,54 @@
    },
    "outputs": [],
    "source": [
-    "scaler_X = MinMaxScaler()\n",
+    "# Train\n",
+    "df = pd.read_pickle(train_data_path)\n",
+    "if \"Date\" in df.columns:\n",
+    "    df = df.drop(\"Date\", axis=1)\n",
+    "df.drop([\"index\"], axis=1, inplace=True)\n",
+    "\n",
+    "\n",
+    "display(df)\n",
+    "\n",
+    "train_inputs = df.iloc[:, :-1]\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(train_inputs)\n",
     "scaler_y = MinMaxScaler()\n",
+    "scaler_y.fit(df.iloc[:, -1].values.reshape(-1, 1))\n",
     "\n",
-    "df = pd.read_pickle(\"../Data/train_dax_data.pkl\")\n",
-    "df[\"Y_scaled\"] = scaler_y.fit_transform(df[\"Y\"].values.reshape(-1, 1))\n",
-    "print(df.dtypes)\n",
-    "X = scaler_X.fit_transform(df.iloc[:, 2:-2])\n",
+    "scaled_train_inputs = scaler.fit_transform(df.iloc[:, :-1].values)  \n",
+    "scaled_train_labels = scaler_y.fit_transform(df.iloc[:, -1].values.reshape(-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test\n",
+    "test_df = pd.read_pickle(test_data_path)\n",
+    "test_df.drop([\"index\"], axis=1, inplace=True)\n",
     "\n",
-    "seq_size = 30\n",
-    "X_sequences, y_sequences = create_sequences(X, df[\"Y_scaled\"].values, seq_size)\n",
+    "display(test_df)\n",
     "\n",
-    "dataset = FinanceDataset(X_sequences, y_sequences)\n",
-    "train_loader = DataLoader(dataset, batch_size=16, shuffle=True)"
+    "scaled_test_inputs = scaler.transform(test_df.iloc[:, 1:-1].values) \n",
+    "scaled_test_labels = scaler_y.transform(test_df.iloc[:, -1].values.reshape(-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize dataset and dataloader\n",
+    "dataset = FinanceDataset(scaled_train_inputs, scaled_train_labels, seq_size=seq_size)\n",
+    "train_loader = DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
+    "\n",
+    "test_dataset = FinanceDataset(scaled_test_inputs, scaled_test_labels, seq_size=seq_size)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=True)"
    ]
   },
   {
@@ -250,11 +275,29 @@
    },
    "outputs": [],
    "source": [
-    "losses = []\n",
+    "os.makedirs(\"../Models\", exist_ok=True)\n",
     "\n",
+    "# Modellpfad festlegen\n",
+    "best_model_path = \"../Models/best_model.pt\"\n",
+    "\n",
+    "# Modell laden, falls es bereits existiert\n",
+    "if os.path.exists(best_model_path):\n",
+    "    net.load_state_dict(torch.load(best_model_path))\n",
+    "    print(f\"Modell erfolgreich geladen von {best_model_path}\")\n",
+    "\n",
+    "# Parameter für Early Stopping und Modell-Speicherung\n",
+    "patience = 8\n",
+    "best_test_loss = float('inf')\n",
+    "early_stopping_counter = 0\n",
+    "\n",
+    "losses = []\n",
+    "test_loss_vals = []\n",
+    "\n",
+    "# Training loop mit Early Stopping\n",
     "for epoch in range(num_epochs):\n",
     "    net.train()\n",
     "    epoch_loss = 0\n",
+    "    # Training\n",
     "    for inputs, labels in train_loader:\n",
     "        optimizer.zero_grad()\n",
     "        outputs = net(inputs)\n",
@@ -262,17 +305,52 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        epoch_loss += loss.item()\n",
-    "\n",
+    "        \n",
     "    epoch_loss /= len(train_loader)\n",
+    "    avg_train_loss = epoch_loss / len(train_loader)\n",
     "    losses.append(epoch_loss)\n",
-    "    print(f\"Epoch {epoch + 1}/{num_epochs}, Loss: {epoch_loss:.4f}\")\n",
     "\n",
-    "# Plot training loss\n",
+    "    # Modell auswerten auf dem Testset\n",
+    "    net.eval()\n",
+    "    running_test_loss = 0\n",
+    "    with torch.no_grad():\n",
+    "        for inputs, labels in test_loader:\n",
+    "            test_outputs = net(inputs)\n",
+    "            test_loss = criterion(test_outputs.squeeze(-1), labels)\n",
+    "            running_test_loss += test_loss.item()\n",
+    "\n",
+    "        avg_test_loss = running_test_loss / len(test_loader)\n",
+    "        test_loss_vals.append(avg_test_loss)\n",
+    "\n",
+    "        # Check for Early Stopping und Speichern des besten Modells\n",
+    "        if avg_test_loss < best_test_loss:\n",
+    "            best_test_loss = avg_test_loss\n",
+    "            torch.save(net.state_dict(), best_model_path)\n",
+    "            print(f\"Bestes Modell gespeichert mit Test Loss: {best_test_loss:.4f}\")\n",
+    "            early_stopping_counter = 0\n",
+    "        else:\n",
+    "            early_stopping_counter += 1\n",
+    "\n",
+    "        # Ausgabe der Verluste\n",
+    "        print(f\"Epoch {epoch + 1}/{num_epochs}, Train Loss: {avg_train_loss:.4f}, Test Loss: {avg_test_loss:.4f}\")\n",
+    "\n",
+    "        # Early Stopping-Kriterium prüfen\n",
+    "        if early_stopping_counter >= patience:\n",
+    "            print(f\"Early stopping nach {epoch + 1} Epochen. Test loss verbesserte sich nicht in den letzten {patience} Epochen.\")\n",
+    "            break\n",
+    "\n",
+    "# Plot der Trainings- und Testverluste\n",
+    "plt.figure(figsize=(10, 5))\n",
     "plt.plot(losses, label='Training Loss')\n",
+    "plt.plot(test_loss_vals, label='Test Loss')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Loss')\n",
     "plt.legend()\n",
+    "plt.title('Training und Test Loss')\n",
+    "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "torch.save(net.state_dict(), \"../Models/best_model.pt\")\n"
+    "print(f\"Training abgeschlossen. Bestes Modell gespeichert unter: {best_model_path}\")"
    ]
   },
   {
@@ -289,14 +367,14 @@
    "outputs": [],
    "source": [
     "scaler = MinMaxScaler()\n",
-    "df = pd.read_pickle(\"../Data/train_dax_data.pkl\").reset_index().iloc[:, :-1]\n",
-    "if \"Date\" in df.columns:\n",
-    "    df = df.drop(\"Date\", axis=1)\n",
-    "if \"index\" in df.columns:\n",
-    "    df = df.drop(\"index\", axis=1)\n",
-    "df = df[[\"Open\", \"High\", \"Low\", \"Close\", \"Adj Close\", \"Volume\", \"month\", \"weekday\"]]\n",
+    "scaler_y = MinMaxScaler()\n",
+    "\n",
+    "df = pd.read_pickle(train_data_path)\n",
+    "df.drop([\"index\"], axis=1, inplace=True)\n",
     "display(df)\n",
-    "scaler.fit(df.values)\n",
+    "\n",
+    "scaled_train_inputs = scaler.fit(df.iloc[:, 1:-1].values)  \n",
+    "scaled_train_labels = scaler_y.fit(df.iloc[:, -1].values.reshape(-1, 1))\n",
     "\n",
     "model_path = \"../Models/best_model.pt\""
    ]
@@ -323,13 +401,14 @@
     "model.load_state_dict(torch.load(model_path)) \n",
     "model.eval()\n",
     "\n",
-    "df = pd.read_pickle('../Data/train_dax_data.pkl')\n",
-    "df = df[[\"Open\", \"High\", \"Low\", \"Close\", \"Adj Close\", \"Volume\", \"month\", \"weekday\", \"Y\"]]\n",
+    "df = pd.read_pickle(test_data_path)\n",
+    "df.drop([\"index\"], axis=1, inplace=True)\n",
+    "display(df)\n",
+    "scaled_test_inputs = scaler.transform(df.iloc[:, 1:-1].values)  \n",
+    "scaled_test_labels = scaler_y.transform(df.iloc[:, -1].values.reshape(-1, 1))\n",
     "\n",
-    "seq_size = 30\n",
-    "X_sequences, y_sequences = create_sequences(X, df[\"Y_scaled\"].values, seq_size)\n",
-    "\n",
-    "dataset = FinanceDataset(X_sequences, y_sequences)\n",
+    "test_data = FinanceDataset(scaled_test_inputs, scaled_test_labels, seq_size=seq_size)\n",
+    "test_loader = DataLoader(test_data, batch_size=batch_size)\n",
     "\n",
     "all_predictions = []\n",
     "all_labels = []\n",
@@ -362,13 +441,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pred = scaler_y.inverse_transform(all_predictions).reshape(-1, 1)\n",
+    "actual = scaler_y.inverse_transform(all_labels.reshape(-1, 1)).reshape(-1, 1)\n",
+    "\n",
+    "# DataFrame erstellen\n",
+    "df_results = pd.DataFrame({\n",
+    "    \"pred\": pred.flatten(),\n",
+    "    \"actual\": actual.flatten(),\n",
+    "})\n",
+    "\n",
+    "# DataFrame anzeigen\n",
+    "print(df_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "os.makedirs(\"logs\", exist_ok=True)\n",
     "os.makedirs(\"results\", exist_ok=True)\n",
     "\n",
-    "test_data = pd.read_pickle(\"../Data/test_dax_data.pkl\")\n",
+    "test_data = pd.read_pickle(test_data_path)\n",
     "\n",
     "scaler = MinMaxScaler()\n",
-    "scaler.fit(test_data.iloc[:, 2:-1])\n",
+    "scaler.fit(test_data.iloc[:, 2:-1].values)\n",
     "\n",
     "scaler_y = MinMaxScaler()\n",
     "scaler_y.fit(test_data.iloc[:, -1].values.reshape(-1, 1))\n",
@@ -418,7 +516,7 @@
     "        \"scaler\": scaler,\n",
     "        \"scaler_y\": scaler_y,\n",
     "    },\n",
-    "    benchmark_asset=\"SPY\",\n",
+    "    benchmark_asset=\"^GDAXI\",\n",
     "    show_plot=True,\n",
     "    show_tearsheet=True,\n",
     ")\n",
@@ -435,29 +533,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import torch\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from torch.utils.data import DataLoader, Dataset\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Dataset-Klasse für Backtesting\n",
-    "class FinanceDataset(Dataset):\n",
-    "    def __init__(self, X, y, seq_size):\n",
-    "        self.X = X\n",
-    "        self.y = y\n",
-    "        self.seq_size = seq_size\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.X) - self.seq_size\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        return (\n",
-    "            torch.tensor(self.X[idx:idx + self.seq_size], dtype=torch.float32),\n",
-    "            torch.tensor(self.y[idx + self.seq_size], dtype=torch.float32),\n",
-    "        )\n",
-    "\n",
     "# Backtesting-Funktion\n",
     "def backtest_model(model, dataloader, scaler_y, seq_size):\n",
     "    model.eval()\n",
@@ -483,7 +558,7 @@
     "    scaler_X = MinMaxScaler()\n",
     "    scaler_y = MinMaxScaler()\n",
     "\n",
-    "    X_test = test_df.iloc[:, 2:-1]\n",
+    "    X_test = test_df.iloc[:, 1:-1]\n",
     "    y_test = test_df.iloc[:, -1]\n",
     "\n",
     "    X_test_scaled = scaler_X.fit_transform(X_test)\n",
@@ -494,7 +569,7 @@
     "    test_dataloader = DataLoader(test_dataset, batch_size=1, shuffle=False)\n",
     "\n",
     "    # Modell laden\n",
-    "    model = Net(input_size=X_test.shape[1], output_size=1, hidden_size=100, num_layers=3)\n",
+    "    model = Net(input_size=input_size, output_size=output_size, hidden_size=hidden_size, num_layers=num_layers)\n",
     "    model.load_state_dict(torch.load(model_path))\n",
     "    model.eval()\n",
     "\n",
@@ -519,13 +594,21 @@
     "    return df_results\n",
     "\n",
     "# Anwendung der Backtesting-Funktion\n",
-    "test_data = pd.read_pickle(\"../Data/test_dax_data.pkl\")  # Testdatensatz laden\n",
+    "test_data = pd.read_pickle(test_data_path)  # Testdatensatz laden\n",
+    "test_data.drop([\"index\"], axis=1, inplace=True)\n",
+    "\n",
     "model_path = \"../Models/best_model.pt\"  # Pfad zum gespeicherten Modell\n",
     "seq_size = 30  # Sequenzgröße\n",
     "\n",
-    "results = run_backtest(test_data, model_path, seq_size)\n",
-    "results.to_csv(\"backtest_results.csv\", index=False)  # Ergebnisse speichern"
+    "results = run_backtest(test_data, model_path, seq_size)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
