Test3 success success

--- a/Test3 - Interest Rate/Code/lstm.ipynb
+++ b/Test3 - Interest Rate/Code/lstm.ipynb
@@ -17,12 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:14:34.036806Z",
-     "start_time": "2024-11-22T10:14:34.030465Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -37,18 +32,15 @@
     "from lumibot.brokers import Alpaca\n",
     "import matplotlib.pyplot as plt\n",
     "from lumibot.backtesting import YahooDataBacktesting\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:14:34.065162Z",
-     "start_time": "2024-11-22T10:14:34.061086Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "file_path = \"../Models/best_model.pt\"\n",
@@ -68,12 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:14:34.106491Z",
-     "start_time": "2024-11-22T10:14:34.102060Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if torch.cuda.is_available():\n",
@@ -102,12 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:14:34.204278Z",
-     "start_time": "2024-11-22T10:14:34.197429Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Model parameter\n",
@@ -119,7 +101,7 @@
     "\n",
     "# Training parameter\n",
     "batch_size = 1\n",
-    "num_epochs = 10\n",
+    "num_epochs = 1\n",
     "learning_rate = 0.0001\n",
     "seq_size = 30\n",
     "\n",
@@ -137,12 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:14:34.228406Z",
-     "start_time": "2024-11-22T10:14:34.224095Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Net(nn.Module):\n",
@@ -168,12 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:14:34.272681Z",
-     "start_time": "2024-11-22T10:14:34.264283Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class FinanceDataset(Dataset):\n",
@@ -206,12 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:14:34.311879Z",
-     "start_time": "2024-11-22T10:14:34.305871Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize model, loss function, optimizer\n",
@@ -230,12 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:14:34.426903Z",
-     "start_time": "2024-11-22T10:14:34.401247Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Train\n",
@@ -254,12 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:14:34.514132Z",
-     "start_time": "2024-11-22T10:14:34.494280Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test\n",
@@ -275,12 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:14:34.746525Z",
-     "start_time": "2024-11-22T10:14:34.740016Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize dataset and dataloader\n",
@@ -301,12 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:17:19.848610Z",
-     "start_time": "2024-11-22T10:14:34.942295Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "os.makedirs(\"../Models\", exist_ok=True)\n",
@@ -406,12 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:17:20.105893Z",
-     "start_time": "2024-11-22T10:17:20.037472Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "scaler = MinMaxScaler()\n",
@@ -430,12 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:17:21.494783Z",
-     "start_time": "2024-11-22T10:17:20.284690Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -486,12 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:17:21.595735Z",
-     "start_time": "2024-11-22T10:17:21.577721Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pred = scaler_y.inverse_transform(all_predictions).reshape(-1, 1)\n",
@@ -510,12 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:22:45.316287Z",
-     "start_time": "2024-11-22T10:22:39.205106Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "os.makedirs(\"logs\", exist_ok=True)\n",
@@ -542,12 +469,12 @@
     "}\n",
     "\n",
     "# Strategy setup\n",
-    "start_date = datetime(2015, 1, 1)\n",
-    "end_date = datetime(2022, 12, 31)\n",
+    "start_date = datetime(2023, 1, 1)\n",
+    "end_date = datetime(2023, 12, 31)\n",
     "broker = Alpaca(ALPACA_CREDS)\n",
     "\n",
     "strategy = Backtest(\n",
-    "    name=\"Test5\",\n",
+    "    name=\"Test3\",\n",
     "    broker=broker,\n",
     "    parameters={\n",
     "        \"symbol\": \"^GDAXI\",\n",
@@ -565,7 +492,7 @@
     "    YahooDataBacktesting,\n",
     "    start_date,\n",
     "    end_date,\n",
-    "    name=\"Test5\",\n",
+    "    name=\"Test3\",\n",
     "    parameters={\n",
     "        \"symbol\": \"^GDAXI\",\n",
     "        \"cash_at_risk\": 0.5,\n",
@@ -589,12 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-22T10:33:30.142889Z",
-     "start_time": "2024-11-22T10:33:25.842085Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Backtesting-Funktion\n",
@@ -669,13 +591,6 @@
     "\n",
     "results = run_backtest(test_data, model_path, seq_size)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
