--- a/Test2 - News/Test2.1 - News LSTM/Code/collect_data.ipynb
+++ b/Test2 - News/Test2.1 - News LSTM/Code/collect_data.ipynb
@@ -22,7 +22,9 @@
     "from datetime import datetime\n",
     "from data_collector import collect_data_inkl_news, determine_trend, get_news, sentiment_int\n",
     "import os\n",
-    "import time"
+    "from ta.momentum import RSIIndicator\n",
+    "from ta.trend import MACD\n",
+    "from ta.volatility import BollingerBands\n"
    ]
   },
   {
@@ -49,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "periods = [(datetime(year, 1, 1), datetime(year, 12, 31)) for year in range(2016, end_year)]\n",
+    "periods = [(datetime(year, 1, 1), datetime(year, 12, 31)) for year in range(start_year, end_year)]\n",
     "\n",
     "folder_path = \"../../Data/spy_data\"\n",
     "os.makedirs(folder_path, exist_ok=True)\n",
@@ -63,8 +65,6 @@
     "    )\n",
     "    df.to_csv(f\"{folder_path}/spy_{start}-{end}.csv\")\n",
     "    \n",
-    "    # Avoid API overflow (only 200 free calls per minute)\n",
-    "    time.sleep(30)\n",
     "    \n"
    ]
   },
@@ -74,50 +74,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = \"../../Data/spy_data\"\n",
-    "spy_files = os.listdir(folder_path)\n",
+    "folder_path = \"../../Data/\"\n",
+    "spy_files = os.listdir(f\"{folder_path}spy_data\")\n",
     "\n",
     "df_list = []\n",
     "for file in spy_files:\n",
     "    if file == \"spy_concat.csv\":\n",
     "        continue\n",
-    "    df = pd.read_csv(f\"{folder_path}/{file}\")\n",
+    "    df = pd.read_csv(f\"{folder_path}spy_data/{file}\")\n",
     "    df.drop(columns=[\"Unnamed: 0\"], inplace=True)\n",
     "    df_list.append(df)\n",
     "\n",
-    "df_spy = pd.concat(df_list)\n",
-    "df_spy.reset_index(inplace=True)\n",
-    "df_spy = df_spy[[\"Date\", \"Open\", \"High\", \"Low\", \"Close\", \"Adj Close\", \"Volume\", \"month\", \"weekday\", \"news_probability\", \"news_sentiment\"]]\n",
-    "df_spy[\"news_probability\"] = df_spy[\"news_probability\"].apply(lambda x: float(x.removeprefix(\"tensor(\").split(\",\")[0]))\n",
-    "df_spy.to_csv(f\"{folder_path}/spy_concat.csv\")\n",
-    "display(df_spy)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_spy[\"trend\"] = df_spy.apply(determine_trend, axis=1)\n",
-    "df_spy[\"sentiment_int\"] = df_spy.apply(sentiment_int, axis=1)\n",
-    "df_train = df_spy.drop(columns=[\"Date\", \"High\", \"Low\", \"Adj Close\", \"Volume\", \"news_sentiment\"])\n",
+    "df = pd.concat(df_list)\n",
     "\n",
-    "df_train['Invest'] = 0\n",
+    "df.reset_index(inplace=True)\n",
+    "df = df[[\"Date\", \"Open\", \"High\", \"Low\", \"Close\", \"Adj Close\", \"Volume\", \"month\", \"weekday\", \"news_probability\", \"news_sentiment\"]]\n",
+    "df[\"news_probability\"] = df[\"news_probability\"].apply(lambda x: float(x.removeprefix(\"tensor(\").split(\",\")[0]))\n",
     "\n",
-    "for index, row in df_train.iterrows():\n",
-    "    if index > 0: \n",
-    "        if df_train.at[index, \"trend\"] == 1:\n",
-    "            df_train.at[index-1, \"Invest\"] = True\n",
-    "        else:\n",
-    "            df_train.at[index-1, \"Invest\"] = False\n",
+    "df[\"trend\"] = df.apply(determine_trend, axis=1)\n",
+    "df[\"sentiment_int\"] = df.apply(sentiment_int, axis=1)\n",
+    "df = df.drop(columns=[\"news_sentiment\"])\n",
     "\n",
-    "df_train[\"month\"] = df_train[\"month\"].astype(int)\n",
-    "df_train[\"weekday\"] = df_train[\"weekday\"].astype(int)\n",
-    "df_train[\"Invest\"] = df_train[\"Invest\"].astype(bool)\n",
+    "df['rsi'] = RSIIndicator(df['Close'], window=14).rsi()\n",
+    "macd = MACD(close=df['Close'])\n",
+    "df['macd'] = macd.macd()\n",
+    "df['macd_signal'] = macd.macd_signal()\n",
+    "bollinger = BollingerBands(close=df['Close'], window=20)\n",
+    "df['bollinger_hband'] = bollinger.bollinger_hband()\n",
+    "df['bollinger_lband'] = bollinger.bollinger_lband()\n",
     "\n",
-    "df_train.to_pickle(\"../../Data/spy_train_data.pkl\")\n",
-    "display(df_train)"
+    "df[\"moving_avg\"] = None\n",
+    "df[\"Y\"] = None\n",
+    "\n",
+    "df[\"Y\"] = df[\"Close\"].shift(-1)\n",
+    "df[\"moving_avg\"] = df[\"Close\"].shift(1).rolling(window=3).mean()\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
+    "df[\"month\"] = df[\"month\"].astype(int)\n",
+    "df[\"weekday\"] = df[\"weekday\"].astype(int)\n",
+    "\n",
+    "df.to_pickle(f\"{folder_path}train_spy_data.pkl\")\n",
+    "display(df)\n",
+    "\n"
    ]
   },
   {
@@ -133,13 +131,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = \"../../Data/test_data\"\n",
-    "os.makedirs(folder_path, exist_ok=True)\n",
+    "folder_path = \"../../Data/\"\n",
+    "os.makedirs(f\"{folder_path}test_data\", exist_ok=True)\n",
     "\n",
     "df = collect_data_inkl_news(\n",
     "    symbol=symbol,\n",
-    "    start=datetime(2022, 11, 1),\n",
-    "    end=datetime(2023, 12, 31),\n",
+    "    start=datetime(2022, 8, 1),\n",
+    "    end=datetime(2024, 1, 31),\n",
     "    alpaca_symbol=\"SPY\" \n",
     ")\n",
     "df.to_csv(f\"{folder_path}/spy.csv\")"
@@ -155,29 +153,32 @@
     "\n",
     "df.reset_index(inplace=True)\n",
     "df = df[[\"Date\", \"Open\", \"High\", \"Low\", \"Close\", \"Adj Close\", \"Volume\", \"month\", \"weekday\", \"news_probability\", \"news_sentiment\"]]\n",
+    "df[\"news_probability\"] = df[\"news_probability\"].apply(lambda x: float(x.removeprefix(\"tensor(\").split(\",\")[0]))\n",
     "\n",
     "df[\"trend\"] = df.apply(determine_trend, axis=1)\n",
     "df[\"sentiment_int\"] = df.apply(sentiment_int, axis=1)\n",
-    "df = df.drop(columns=[\"High\", \"Low\", \"Adj Close\", \"Volume\", \"news_sentiment\"])\n",
+    "df = df.drop(columns=[\"news_sentiment\"])\n",
     "\n",
-    "df['Invest'] = 0\n",
+    "df['rsi'] = RSIIndicator(df['Close'], window=14).rsi()\n",
+    "macd = MACD(close=df['Close'])\n",
+    "df['macd'] = macd.macd()\n",
+    "df['macd_signal'] = macd.macd_signal()\n",
+    "bollinger = BollingerBands(close=df['Close'], window=20)\n",
+    "df['bollinger_hband'] = bollinger.bollinger_hband()\n",
+    "df['bollinger_lband'] = bollinger.bollinger_lband()\n",
     "\n",
-    "for index, row in df.iterrows():\n",
-    "    if index > 0: \n",
-    "        if df.at[index, \"trend\"] == 1:\n",
-    "            df.at[index-1, \"Invest\"] = True\n",
-    "        else:\n",
-    "            df.at[index-1, \"Invest\"] = False\n",
+    "df[\"moving_avg\"] = None\n",
+    "df[\"Y\"] = None\n",
+    "\n",
+    "df[\"Y\"] = df[\"Close\"].shift(-1)\n",
+    "df[\"moving_avg\"] = df[\"Close\"].shift(1).rolling(window=3).mean()\n",
+    "df.dropna(inplace=True)\n",
     "\n",
     "df[\"month\"] = df[\"month\"].astype(int)\n",
     "df[\"weekday\"] = df[\"weekday\"].astype(int)\n",
-    "df[\"Invest\"] = df[\"Invest\"].astype(bool)\n",
     "\n",
-    "\n",
-    "df.to_pickle(f\"../../Data/spy_test_data.pkl\")\n",
-    "display(df)\n",
-    "\n",
-    "df.iloc[:, :-1][:30]"
+    "df.to_pickle(f\"{folder_path}test_spy_data.pkl\")\n",
+    "display(df)"
    ]
   }
  ],
