--- a/Test2 - News/Test2.3 - News LSTM different Data/Code/collect_data.ipynb
+++ b/Test2 - News/Test2.3 - News LSTM different Data/Code/collect_data.ipynb
@@ -22,7 +22,9 @@
     "from datetime import datetime\n",
     "from data_collector import collect_data_inkl_news, determine_trend, get_news, sentiment_int\n",
     "import os\n",
-    "import time"
+    "from ta.momentum import RSIIndicator\n",
+    "from ta.trend import MACD\n",
+    "from ta.volatility import BollingerBands\n"
    ]
   },
   {
@@ -73,57 +75,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = \"../../Data/spy_data\"\n",
-    "spy_files = os.listdir(folder_path)\n",
+    "folder_path = \"../../Data/\"\n",
+    "spy_files = os.listdir(f\"{folder_path}spy_data\")\n",
     "\n",
     "df_list = []\n",
     "for file in spy_files:\n",
     "    if file == \"spy_concat.csv\":\n",
     "        continue\n",
-    "    df = pd.read_csv(f\"{folder_path}/{file}\")\n",
+    "    df = pd.read_csv(f\"{folder_path}spy_data/{file}\")\n",
     "    df.drop(columns=[\"Unnamed: 0\"], inplace=True)\n",
     "    df_list.append(df)\n",
     "\n",
-    "df_spy = pd.concat(df_list)\n",
-    "df_spy.reset_index(inplace=True)\n",
-    "df_spy = df_spy[[\"Date\", \"Open\", \"High\", \"Low\", \"Close\", \"Adj Close\", \"Volume\", \"month\", \"weekday\", \"news_probability\", \"news_sentiment\"]]\n",
-    "df_spy[\"news_probability\"] = df_spy[\"news_probability\"].apply(lambda x: float(x.removeprefix(\"tensor(\").split(\",\")[0]))\n",
-    "df_spy.to_csv(f\"{folder_path}/spy_concat.csv\")\n",
-    "display(df_spy)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_spy[\"trend\"] = df_spy.apply(determine_trend, axis=1)\n",
-    "df_spy[\"sentiment_int\"] = df_spy.apply(sentiment_int, axis=1)\n",
-    "df_train = df_spy.drop(columns=[\"Open\", \"Close\", \"month\", \"weekday\", \"High\", \"Low\", \"Adj Close\", \"Volume\", \"news_sentiment\"])\n",
+    "df = pd.concat(df_list)\n",
     "\n",
-    "df_train[\"positive\"] = (df_train[\"sentiment_int\"] == 1) * df_train[\"news_probability\"]\n",
-    "df_train[\"negative\"] = (df_train[\"sentiment_int\"] == -1) * df_train[\"news_probability\"]\n",
-    "df_train[\"neutral\"] = (df_train[\"sentiment_int\"] == 0) * df_train[\"news_probability\"]\n",
+    "df.reset_index(inplace=True)\n",
+    "df = df[[\"Date\", \"Open\", \"High\", \"Low\", \"Close\", \"Adj Close\", \"Volume\", \"month\", \"weekday\", \"news_probability\", \"news_sentiment\"]]\n",
+    "df[\"news_probability\"] = df[\"news_probability\"].apply(lambda x: float(x.removeprefix(\"tensor(\").split(\",\")[0]))\n",
     "\n",
-    "df_train['Invest'] = 0\n",
+    "df[\"trend\"] = df.apply(determine_trend, axis=1)\n",
+    "df[\"sentiment_int\"] = df.apply(sentiment_int, axis=1)\n",
+    "df = df.drop(columns=[\"news_sentiment\"])\n",
     "\n",
-    "for index, row in df_train.iterrows():\n",
-    "    if index > 0: \n",
-    "        if df_train.at[index, \"trend\"] == 1:\n",
-    "            df_train.at[index-1, \"Invest\"] = True\n",
-    "        else:\n",
-    "            df_train.at[index-1, \"Invest\"] = False\n",
+    "df['rsi'] = RSIIndicator(df['Close'], window=14).rsi()\n",
+    "macd = MACD(close=df['Close'])\n",
+    "df['macd'] = macd.macd()\n",
+    "df['macd_signal'] = macd.macd_signal()\n",
+    "bollinger = BollingerBands(close=df['Close'], window=20)\n",
+    "df['bollinger_hband'] = bollinger.bollinger_hband()\n",
+    "df['bollinger_lband'] = bollinger.bollinger_lband()\n",
     "\n",
+    "df[\"moving_avg\"] = None\n",
+    "df[\"moving_avg\"] = df[\"Close\"].shift(1).rolling(window=3).mean()\n",
     "\n",
+    "df[\"month\"] = df[\"month\"].astype(int)\n",
+    "df[\"weekday\"] = df[\"weekday\"].astype(int)\n",
     "\n",
+    "df[\"positive\"] = (df[\"sentiment_int\"] == 1) * df[\"news_probability\"]\n",
+    "df[\"negative\"] = (df[\"sentiment_int\"] == -1) * df[\"news_probability\"]\n",
+    "df[\"neutral\"] = (df[\"sentiment_int\"] == 0) * df[\"news_probability\"]\n",
     "\n",
-    "df_train[\"Invest\"] = df_train[\"Invest\"].astype(bool)\n",
-    "df_train = df_train[[\"Date\", \"positive\", \"negative\", \"neutral\", \"Invest\"]]\n",
-    "df_train.sort_values(\"Date\", inplace=True)\n",
+    "df[\"Y\"] = None\n",
+    "df[\"Y\"] = df[\"Close\"].shift(-1)\n",
+    "df.dropna(inplace=True)\n",
+    "df.drop(columns=[\"news_probability\", \"sentiment_int\"], inplace=True)\n",
     "\n",
-    "df_train.to_pickle(\"../../Data/spy_train_data.pkl.gz\", compression=\"gzip\")\n",
-    "display(df_train)"
+    "df.sort_values(\"Date\", inplace=True)\n",
+    "\n",
+    "df.to_pickle(f\"{folder_path}train_spy_data.pkl\")\n",
+    "display(df)"
    ]
   },
   {
@@ -159,33 +158,41 @@
    "source": [
     "df = pd.read_csv(f\"{folder_path}/spy.csv\")\n",
     "\n",
-    "df[\"trend\"] = df_spy.apply(determine_trend, axis=1)\n",
-    "df[\"sentiment_int\"] = df.apply(sentiment_int, axis=1)\n",
-    "df = df.drop(columns=[\"Open\", \"Close\", \"month\", \"weekday\", \"High\", \"Low\", \"Adj Close\", \"Volume\", \"news_sentiment\"])\n",
+    "df.reset_index(inplace=True)\n",
+    "df = df[[\"Date\", \"Open\", \"High\", \"Low\", \"Close\", \"Adj Close\", \"Volume\", \"month\", \"weekday\", \"news_probability\", \"news_sentiment\"]]\n",
     "df[\"news_probability\"] = df[\"news_probability\"].apply(lambda x: float(x.removeprefix(\"tensor(\").split(\",\")[0]))\n",
+    "\n",
+    "df[\"trend\"] = df.apply(determine_trend, axis=1)\n",
+    "df[\"sentiment_int\"] = df.apply(sentiment_int, axis=1)\n",
+    "df = df.drop(columns=[\"news_sentiment\"])\n",
+    "\n",
+    "df['rsi'] = RSIIndicator(df['Close'], window=14).rsi()\n",
+    "macd = MACD(close=df['Close'])\n",
+    "df['macd'] = macd.macd()\n",
+    "df['macd_signal'] = macd.macd_signal()\n",
+    "bollinger = BollingerBands(close=df['Close'], window=20)\n",
+    "df['bollinger_hband'] = bollinger.bollinger_hband()\n",
+    "df['bollinger_lband'] = bollinger.bollinger_lband()\n",
+    "\n",
+    "df[\"moving_avg\"] = None\n",
+    "df[\"moving_avg\"] = df[\"Close\"].shift(1).rolling(window=3).mean()\n",
+    "\n",
+    "df[\"month\"] = df[\"month\"].astype(int)\n",
+    "df[\"weekday\"] = df[\"weekday\"].astype(int)\n",
     "\n",
     "df[\"positive\"] = (df[\"sentiment_int\"] == 1) * df[\"news_probability\"]\n",
     "df[\"negative\"] = (df[\"sentiment_int\"] == -1) * df[\"news_probability\"]\n",
     "df[\"neutral\"] = (df[\"sentiment_int\"] == 0) * df[\"news_probability\"]\n",
     "\n",
-    "df['Invest'] = 0\n",
-    "df.reset_index(inplace=True)\n",
+    "df[\"Y\"] = None\n",
+    "df[\"Y\"] = df[\"Close\"].shift(-1)\n",
+    "df.dropna(inplace=True)\n",
+    "df.drop(columns=[\"news_probability\", \"sentiment_int\"], inplace=True)\n",
     "\n",
-    "for index, row in df.iterrows():\n",
-    "    if index > 0: \n",
-    "        if df.at[index, \"trend\"] == 1:\n",
-    "            df.at[index-1, \"Invest\"] = True\n",
-    "        else:\n",
-    "            df.at[index-1, \"Invest\"] = False\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "df[\"Invest\"] = df[\"Invest\"].astype(bool)\n",
-    "df = df[[\"Date\", \"positive\", \"negative\", \"neutral\", \"Invest\"]]\n",
     "df.sort_values(\"Date\", inplace=True)\n",
     "\n",
-    "df.to_pickle(\"../../Data/spy_test_data.pkl.gz\", compression=\"gzip\")\n",
+    "df.to_pickle(f\"{folder_path}test_spy_data.pkl\")\n",
+    "print(df.columns)\n",
     "display(df)"
    ]
   }
