--- a/Test5/Code/collect_data.ipynb
+++ b/Test5/Code/collect_data.ipynb
@@ -47,17 +47,17 @@
    "source": [
     "os.makedirs(\"../Data\", exist_ok=True)\n",
     "\n",
-    "df = get_finance_data(symbols=\"^GDAXI\", interval=\"1d\",start=datetime(2015, 1, 1), end=datetime(2022, 12, 31))\n",
-    "df.reset_index(inplace=True)\n",
-    "#df['trend'] = df.apply(determine_trend, axis=1)\n",
+    "df = get_finance_data(symbols=\"^GDAXI\", interval=\"1d\",start=datetime(2000, 1, 1), end=datetime(2022, 12, 31))\n",
+    "df.reset_index(inplace=True, drop=True)\n",
+    "df.sort_values([\"Date\"])\n",
     "\n",
-    "# df['rsi'] = RSIIndicator(df['Close'], window=14).rsi()\n",
-    "# macd = MACD(close=df['Close'])\n",
-    "# df['macd'] = macd.macd()\n",
-    "# df['macd_signal'] = macd.macd_signal()\n",
-    "# bollinger = BollingerBands(close=df['Close'], window=20)\n",
-    "# df['bollinger_hband'] = bollinger.bollinger_hband()\n",
-    "# df['bollinger_lband'] = bollinger.bollinger_lband()\n",
+    "df['rsi'] = RSIIndicator(df['Close'], window=14).rsi()\n",
+    "macd = MACD(close=df['Close'])\n",
+    "df['macd'] = macd.macd()\n",
+    "df['macd_signal'] = macd.macd_signal()\n",
+    "bollinger = BollingerBands(close=df['Close'], window=20)\n",
+    "df['bollinger_hband'] = bollinger.bollinger_hband()\n",
+    "df['bollinger_lband'] = bollinger.bollinger_lband()\n",
     "\n",
     "df[\"Y\"] = None\n",
     "for index, row in df.iterrows():\n",
@@ -66,6 +66,8 @@
     "df.drop(df.tail(1).index,inplace=True)\n",
     "       \n",
     "df[\"month\"] = df[\"month\"].astype(int)\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
     "df.to_pickle(\"../Data/train_dax_data.pkl\")\n",
     "display(df)"
    ]
@@ -84,8 +86,8 @@
    "outputs": [],
    "source": [
     "df = get_finance_data(symbols=\"^GDAXI\", interval=\"1d\",start=datetime(2022, 10, 1), end=datetime(2023, 12, 31))\n",
-    "df.reset_index(inplace=True)\n",
-    "#df['trend'] = df.apply(determine_trend, axis=1)\n",
+    "df.reset_index(inplace=True, drop=True)\n",
+    "df.sort_values([\"Date\"])\n",
     "\n",
     "df['rsi'] = RSIIndicator(df['Close'], window=14).rsi()\n",
     "macd = MACD(close=df['Close'])\n",
@@ -99,9 +101,11 @@
     "for index, row in df.iterrows():\n",
     "    if index > 0:\n",
     "        df.at[index-1, \"Y\"] = df.at[index, \"Close\"]\n",
-    "df.drop(df.tail(1).index,inplace=True)\n",
+    "        \n",
     "       \n",
     "df[\"month\"] = df[\"month\"].astype(int)\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
     "df.to_pickle(\"../Data/test_dax_data.pkl\")\n",
     "display(df)"
    ]
