--- a/Test5/Code/lstm.ipynb
+++ b/Test5/Code/lstm.ipynb
@@ -37,7 +37,23 @@
     "from lumibot.brokers import Alpaca\n",
     "import matplotlib.pyplot as plt\n",
     "from lumibot.backtesting import YahooDataBacktesting\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# file_path = \"../Models/best_model.pt\"\n",
+    "\n",
+    "# # Delete current model\n",
+    "# if os.path.exists(file_path):\n",
+    "#     os.remove(file_path)"
    ]
   },
   {
@@ -72,6 +88,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Hyperparameter"
    ]
@@ -88,16 +109,16 @@
    "outputs": [],
    "source": [
     "# Model parameter\n",
-    "input_size = 8\n",
+    "input_size = 13\n",
     "output_size = 1\n",
-    "hidden_size = 1500\n",
-    "num_layers = 6\n",
+    "hidden_size = 1000\n",
+    "num_layers = 1\n",
     "dropout = 0.2\n",
     "\n",
     "# Training parameter\n",
     "batch_size = 1\n",
-    "num_epochs = 500\n",
-    "learning_rate = 0.001\n",
+    "num_epochs = 500 # early stopping\n",
+    "learning_rate = 0.0001\n",
     "seq_size = 30\n",
     "\n",
     "train_data_path = \"../Data/train_dax_data.pkl\"\n",
@@ -129,7 +150,8 @@
     "\n",
     "    def forward(self, x):\n",
     "        x, _ = self.lstm(x)\n",
-    "        x = self.fc(x[:, -1, :])  # Output from the last timestep\n",
+    "        x = self.fc(x[:, -1, :]) \n",
+    "        \n",
     "        return x\n"
    ]
   },
@@ -209,21 +231,14 @@
    "source": [
     "# Train\n",
     "df = pd.read_pickle(train_data_path)\n",
-    "if \"Date\" in df.columns:\n",
-    "    df = df.drop(\"Date\", axis=1)\n",
-    "df.drop([\"index\"], axis=1, inplace=True)\n",
-    "\n",
+    "df.sort_values(\"Date\", inplace=True)\n",
     "\n",
     "display(df)\n",
     "\n",
-    "train_inputs = df.iloc[:, :-1]\n",
-    "\n",
     "scaler = MinMaxScaler()\n",
-    "scaler.fit(train_inputs)\n",
     "scaler_y = MinMaxScaler()\n",
-    "scaler_y.fit(df.iloc[:, -1].values.reshape(-1, 1))\n",
     "\n",
-    "scaled_train_inputs = scaler.fit_transform(df.iloc[:, :-1].values)  \n",
+    "scaled_train_inputs = scaler.fit_transform(df.iloc[:, 1:-1].values)  \n",
     "scaled_train_labels = scaler_y.fit_transform(df.iloc[:, -1].values.reshape(-1, 1))"
    ]
   },
@@ -235,7 +250,7 @@
    "source": [
     "# Test\n",
     "test_df = pd.read_pickle(test_data_path)\n",
-    "test_df.drop([\"index\"], axis=1, inplace=True)\n",
+    "test_df.sort_values(\"Date\", inplace=True)\n",
     "\n",
     "display(test_df)\n",
     "\n",
@@ -297,10 +312,12 @@
     "for epoch in range(num_epochs):\n",
     "    net.train()\n",
     "    epoch_loss = 0\n",
+    "    epoch_output = []\n",
     "    # Training\n",
     "    for inputs, labels in train_loader:\n",
     "        optimizer.zero_grad()\n",
     "        outputs = net(inputs)\n",
+    "        epoch_output.append(outputs.detach().numpy())\n",
     "        loss = criterion(outputs.squeeze(-1), labels)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -324,6 +341,7 @@
     "\n",
     "        # Check for Early Stopping und Speichern des besten Modells\n",
     "        if avg_test_loss < best_test_loss:\n",
+    "            best_epoch = epoch\n",
     "            best_test_loss = avg_test_loss\n",
     "            torch.save(net.state_dict(), best_model_path)\n",
     "            print(f\"Bestes Modell gespeichert mit Test Loss: {best_test_loss:.4f}\")\n",
@@ -338,6 +356,8 @@
     "        if early_stopping_counter >= patience:\n",
     "            print(f\"Early stopping nach {epoch + 1} Epochen. Test loss verbesserte sich nicht in den letzten {patience} Epochen.\")\n",
     "            break\n",
+    "    # print(f\"Std Epoch Out: {np.std(epoch_output)}\")\n",
+    "    # print(f\"Mean Epoch Out: {np.mean(epoch_output)}\")\n",
     "\n",
     "# Plot der Trainings- und Testverluste\n",
     "plt.figure(figsize=(10, 5))\n",
@@ -350,7 +370,11 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "print(f\"Training abgeschlossen. Bestes Modell gespeichert unter: {best_model_path}\")"
+    "print(f\"Training abgeschlossen. Bestes Modell gespeichert unter: {best_model_path}\")\n",
+    "print(f\"Std Training Loss: {np.std(losses)}\")\n",
+    "print(f\"Std Test Loss: {np.std(test_loss_vals)}\")\n",
+    "print(f\"Min Training Loss: {np.min(losses)}\")\n",
+    "print(f\"Min Test Loss: {np.min(test_loss_vals)}\")"
    ]
   },
   {
@@ -370,7 +394,6 @@
     "scaler_y = MinMaxScaler()\n",
     "\n",
     "df = pd.read_pickle(train_data_path)\n",
-    "df.drop([\"index\"], axis=1, inplace=True)\n",
     "display(df)\n",
     "\n",
     "scaled_train_inputs = scaler.fit(df.iloc[:, 1:-1].values)  \n",
@@ -402,7 +425,6 @@
     "model.eval()\n",
     "\n",
     "df = pd.read_pickle(test_data_path)\n",
-    "df.drop([\"index\"], axis=1, inplace=True)\n",
     "display(df)\n",
     "scaled_test_inputs = scaler.transform(df.iloc[:, 1:-1].values)  \n",
     "scaled_test_labels = scaler_y.transform(df.iloc[:, -1].values.reshape(-1, 1))\n",
@@ -464,12 +486,14 @@
     "os.makedirs(\"results\", exist_ok=True)\n",
     "\n",
     "test_data = pd.read_pickle(test_data_path)\n",
-    "\n",
+    "train_data = pd.read_pickle(train_data_path)\n",
+    "display(train_data)\n",
+    "display(test_data)\n",
     "scaler = MinMaxScaler()\n",
-    "scaler.fit(test_data.iloc[:, 2:-1].values)\n",
+    "scaler.fit(train_data.iloc[:, 1:-1].values)\n",
     "\n",
     "scaler_y = MinMaxScaler()\n",
-    "scaler_y.fit(test_data.iloc[:, -1].values.reshape(-1, 1))\n",
+    "scaler_y.fit(train_data.iloc[:, -1].values.reshape(-1, 1))\n",
     "\n",
     "model = Net(input_size, output_size, hidden_size, num_layers)\n",
     "model_path = \"../Models/best_model.pt\"\n",
@@ -533,7 +557,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Backtesting-Funktion\n",
+    "finance_data = pd.read_pickle(test_data_path)\n",
+    "finance_data.sort_values(\"Date\", inplace=True)\n",
+    "print(\"bsvubsv\")\n",
+    "print(finance_data.columns)\n",
+    "finance_data = finance_data.iloc[:30, 1:-1]\n",
+    "print(finance_data.columns)\n",
+    "finance_data = scaler.transform(finance_data.values).reshape(1, 30, len(finance_data.columns))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def backtest_model(model, dataloader, scaler_y, seq_size):\n",
     "    model.eval()\n",
     "    predictions = []\n",
@@ -546,37 +584,33 @@
     "            predictions.extend(output.numpy())\n",
     "            actuals.extend(y_batch.numpy())\n",
     "\n",
-    "    # Rücktransformation der Vorhersagen und tatsächlichen Werte\n",
     "    predictions = scaler_y.inverse_transform(np.array(predictions).reshape(-1, 1))\n",
     "    actuals = scaler_y.inverse_transform(np.array(actuals).reshape(-1, 1))\n",
     "\n",
     "    return predictions.flatten(), actuals.flatten()\n",
     "\n",
-    "# Backtesting starten\n",
     "def run_backtest(test_df, model_path, seq_size):\n",
-    "    # Daten vorverarbeiten\n",
     "    scaler_X = MinMaxScaler()\n",
     "    scaler_y = MinMaxScaler()\n",
+    "    train_data = pd.read_pickle(train_data_path)\n",
+    "    scaler_X.fit(train_data.iloc[:, 1:-1].values)\n",
+    "    scaler_y.fit(train_data.iloc[:, -1].values.reshape(-1, 1))\n",
     "\n",
     "    X_test = test_df.iloc[:, 1:-1]\n",
     "    y_test = test_df.iloc[:, -1]\n",
     "\n",
-    "    X_test_scaled = scaler_X.fit_transform(X_test)\n",
-    "    y_test_scaled = scaler_y.fit_transform(y_test.values.reshape(-1, 1))\n",
+    "    X_test_scaled = scaler_X.transform(X_test.values)\n",
+    "    y_test_scaled = scaler_y.transform(y_test.values.reshape(-1, 1))\n",
     "\n",
-    "    # Sequenzen erstellen\n",
     "    test_dataset = FinanceDataset(X_test_scaled, y_test_scaled, seq_size)\n",
     "    test_dataloader = DataLoader(test_dataset, batch_size=1, shuffle=False)\n",
     "\n",
-    "    # Modell laden\n",
     "    model = Net(input_size=input_size, output_size=output_size, hidden_size=hidden_size, num_layers=num_layers)\n",
     "    model.load_state_dict(torch.load(model_path))\n",
     "    model.eval()\n",
     "\n",
-    "    # Backtesting durchführen\n",
     "    predictions, actuals = backtest_model(model, test_dataloader, scaler_y, seq_size)\n",
     "\n",
-    "    # Ergebnisse visualisieren\n",
     "    plt.figure(figsize=(14, 7))\n",
     "    plt.plot(predictions, label=\"Predicted\", color=\"blue\")\n",
     "    plt.plot(actuals, label=\"Actual\", color=\"orange\")\n",
@@ -594,11 +628,9 @@
     "    return df_results\n",
     "\n",
     "# Anwendung der Backtesting-Funktion\n",
-    "test_data = pd.read_pickle(test_data_path)  # Testdatensatz laden\n",
-    "test_data.drop([\"index\"], axis=1, inplace=True)\n",
+    "test_data = pd.read_pickle(test_data_path)  \n",
     "\n",
-    "model_path = \"../Models/best_model.pt\"  # Pfad zum gespeicherten Modell\n",
-    "seq_size = 30  # Sequenzgröße\n",
+    "model_path = \"../Models/best_model.pt\"  \n",
     "\n",
     "results = run_backtest(test_data, model_path, seq_size)\n"
    ]
