multi input init

--- a/Test2 - News/Test2.1 - News LSTM/Code/collect_data.ipynb
+++ b/Test2 - News/Test2.1 - News LSTM/Code/collect_data.ipynb
@@ -63,9 +63,7 @@
     "    end=end,\n",
     "    alpaca_symbol=\"SPY\" \n",
     "    )\n",
-    "    df.to_csv(f\"{folder_path}/spy_{start}-{end}.csv\")\n",
-    "    \n",
-    "    \n"
+    "    df.to_csv(f\"{folder_path}/spy_{start}-{end}.csv\")"
    ]
   },
   {
